--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,11 +17,11 @@ doctrine:
         auto_mapping: true
         mappings:
             App:
-                type: attribute
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
+                dir: '%kernel.project_dir%/config/doctrine'
                 prefix: 'App\Entity'
                 alias: App
+                type: xml
         controller_resolver:
             auto_mapping: false
 
