--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+#/var/
+#/vendor/
+###< symfony/framework-bundle ###
 /var/
 /vendor/
-###< symfony/framework-bundle ###
+/.idea
