--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,13 +7,16 @@ register:
     controller: App\Controller\UserController::register
 menu:
     path: /menu
-    controller: App\Controller\UserController::menu
+    controller: App\Controller\GameController::menu
 game_over:
     path: /game_over
-    controller: App\Controller\UserController::game_over
-
-
-
+    controller: App\Controller\GameController::game_over
+game:
+    path: /game
+    controller: App\Controller\GameController::game
+login-page:
+    path: /login-page
+    controller: App\Controller\GameController::loginPage
 
 # api
 api_register:
