--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,7 @@
 index:
     path: /
     methods: GET
-    controller: App\Controller\UserController::index
+    controller: App\Controller\GameController::menu
 register:
     path: /signup
     controller: App\Controller\UserController::register
