--- a/.env
+++ b/.env
@@ -26,6 +26,6 @@ APP_SECRET=1a0beaa95c92d7db1a4c7d728dbc8902
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql:host=127.0.0.1;dbname=tetris"
-DATABASE_URL="mysql://yel:qwerty@127.0.0.1:3306/tetris?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql:host=127.0.0.1;dbname=tetris"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
