реально создали тетрис(real create tetris)

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     },
     "config": {
         "allow-plugins": {
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "symfony/flex": true
         }
     }
 }
