more menu to menu god

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -16,6 +16,18 @@ logout:
 menu:
     path: /menu
     controller: App\Controller\GameController::menu
+select_mode:
+    path: /select_mode
+    controller: App\Controller\GameController::selectMode
+select_classic_mode:
+    path: /select_classic_mode
+    controller: App\Controller\GameController::selectClassicMode
+select_solo_mode:
+    path: /select_solo_mode
+    controller: App\Controller\GameController::selectSoloMode
+about:
+    path: /about
+    controller: App\Controller\GameController::about
 game_over:
     path: /game_over
     controller: App\Controller\GameController::gameOver
