--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -13,6 +13,10 @@ logout:
     path: /logout
     controller: App\Controller\SecurityController::logout
 
+lobby:
+    path: /lobby
+    controller: App\Controller\GameController::lobby
+
 menu:
     path: /menu
     controller: App\Controller\GameController::menu
