--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -47,6 +47,11 @@ multiplayer:
     methods: GET
     controller: App\Controller\GameController::multiplayer
 
+get_user:
+    path: /api/player/{id}/user
+    methods: GET
+    controller: App\Controller\PlayerController::getUserApi
+
 # api
 api_register:
     path: /api/register
