--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -28,6 +28,9 @@ select_multiplayer_mode:
 select_classic_mode:
     path: /select_classic_mode
     controller: App\Controller\GameController::selectDif
+select_koop_mode:
+    path: /select_koop_mode
+    controller: App\Controller\GameController::selectKoop
 select_solo_mode:
     path: /select_solo_mode
     controller: App\Controller\GameController::selectSoloMode
@@ -43,6 +46,9 @@ game:
 blitz:
     path: /blitz
     controller: App\Controller\GameController::blitz
+koop:
+    path: /koop
+    controller: App\Controller\GameController::koop
 l40:
     path: /l40
     controller: App\Controller\GameController::l40
