--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "ext-mongodb": "*",
         "doctrine/orm": "^3.2",
         "doctrine/migrations": "^3.8",
         "symfony/runtime": "^7.1",
@@ -20,7 +21,9 @@
         "symfony/security-bundle": "^7.1",
         "symfony/yaml": "^7.1",
         "symfony/validator": "^7.1",
-        "symfony/form": "^7.1"
+        "symfony/form": "^7.1",
+        "doctrine/mongodb-odm-bundle": "^5.0",
+        "symfony/dotenv": "^7.1"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.60"
