--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/validator": "^7.1",
         "symfony/form": "^7.1",
         "doctrine/mongodb-odm-bundle": "^5.0",
-        "symfony/dotenv": "^7.1"
+        "symfony/dotenv": "^7.1",
+        "doctrine/mongodb-odm": "^2.8"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.60"
