--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -62,6 +62,9 @@ game:
 blitz:
     path: /blitz
     controller: App\Controller\GameController::blitz
+bot:
+    path: /bot
+    controller: App\Controller\GameController::bot
 koop:
     path: /koop
     controller: App\Controller\GameController::koop
