Добавлено описание сохранения игры

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -90,6 +90,10 @@ get_user:
     path: /api/player/{id}/user
     methods: GET
     controller: App\Controller\PlayerController::getUserApi
+api_save_single_game:
+    path: /api/game/single/add
+    methods: POST
+    controller: App\Controller\PlayerController::storeSingleGame
 api_update_statistics:
     path: /api/statistics
     methods: POST
