Добавил получение рейтинга игр

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -90,6 +90,10 @@ api_save_single_game:
     path: /api/game/single/add
     methods: POST
     controller: App\Controller\PlayerController::storeSingleGame
+api_save_multiplayer_game:
+    path: /api/game/multiplayer/add
+    methods: POST
+    controller: App\Controller\GameController::storeMultiplayerGame
 api_update_statistics:
     path: /api/statistics
     methods: POST
@@ -102,6 +106,11 @@ api_get_user:
     path: /api/player/{id}
     methods: GET
     controller: App\Controller\PlayerController::getUserApi
+api_get_game_rating:
+    path: /api/game/rating
+    methods: GET
+    controller: App\Controller\GameController::getGamesWithFiltering
+
 
 test:
     path: /test
