--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -110,6 +110,10 @@ api_get_game_rating:
     path: /api/game/rating
     methods: GET
     controller: App\Controller\GameController::getGamesWithFiltering
+api_get_game_count:
+    path: /api/game/count
+    methods: GET
+    controller: App\Controller\GameController::countGamesWithFiltering
 
 
 test:
